# rez-shotgun-desktop

./: CMakeLists.txt  README.md  install.sh  package.py
